# SingularisPrime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  jest.config.js  jest.setup.js  manual-test.js  package-lock.json  package.json  run-quantum-tests.sh  run-tests.sh  theme.json
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/msi-native/src/main/cpp/: CMakeLists.txt  native_state.cpp
client/: index.html
docs/: AI_Infrastructure_Design.md  API_Documentation.md  API_Key_Authentication.md  ARCHITECTURE.md  Advanced_Technical_Components.md  BOOT_SEQUENCE.md  Blockchain_Governance_Infrastructure.md  COGNITIVE_PRIMITIVES.md  Containerization_Strategy.md  DISASTER_RECOVERY.md  DevOps_Governance_Integration.md  Development_Roadmap.md  Enhanced_Blockchain_Governance.md  Industrial_Integration_Network.md  Infrastructure_Architecture.md  Infrastructure_Implementation_Roadmap.md  Lumira_AI_Integration.md  Music_Portal_Integration.md  NinjaPortal_Shinobi_Integration.md  OT_Network_API.md  SINet_User_Guide.md  SINet_Whitepaper.md  Spark-X_Ignition_System.md  paradox_resolver_integration.md  paradox_resolver_postman_collection.json  planetary_quantum_network.md  quantum_decision_system.md  quantum_testing.md
msi/: contract.yaml  idl.ts  spec.md
scripts/: generateAudio.js
server/: aiService.ts  routes.ts  storage.ts  xaiService.ts
shared/: schema.ts
substrate/: lowering.md  spec.sp
tests/: HofstadterButterflyVisualizer.test.tsx  QuantumVisualizer.test.tsx  QuantumVisualizerDashboard.test.tsx  hofstadter-test.ts  quantum-bytecode-test.ts  (+4 more)
(+41 files in other folders)
